suggestions component update

--- a/public/index.html
+++ b/public/index.html
@@ -17,6 +17,7 @@
       var accessMessage = '<div style="width: 600px; margin: 0 auto; text-align: center; font-size: 40px;">' +
         '<p>Вы используете устаревший браузер.</p>' + 
         '<p>Пожалуйста воспользуйтесь другой, более современной версией.</p>' +
+		'<p>Скачайте и установите <a href="https://www.mozilla.org/ru/firefox/download/thanks/">Firefox</a> последней версии.</p>' +
       '</div>';
 
       if (ua.indexOf('MSIE ') !== -1) {
